tests/baselines/reference/jsxViaImport.errors.txt
component.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
component.d.ts(4,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
consumer.tsx(5,17): error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.


==== consumer.tsx (1 errors) ====
    /// <reference path="component.d.ts" />
    import BaseComponent = require('BaseComponent');
    class TestComponent extends React.Component<any, {}> {
        render() {
            return <BaseComponent />;
                    ~~~~~~~~~~~~~
!!! error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.
        }
    }
    
==== component.d.ts (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      interface ElementAttributesProperty { props; }
    }
    declare module React {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      class Component<T, U> { }
    }
    declare module "BaseComponent" {
        var base: React.Component<any, {}>;
        export = base;
    }
    